# CLI_chess

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp  utils.cpp  utils.h
Exceptions/: WrongInputException.cpp  WrongInputException.h  WrongMoveException.cpp  WrongMoveException.h
Figures/: Bishop.cpp  Bishop.h  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
